--- a/Views/Catalog/CreateBook.cshtml
+++ b/Views/Catalog/CreateBook.cshtml
@@ -15,5 +15,29 @@
         <label asp-for="Author"></label>
         <input asp-for="Author" class="form-control" />
     </div>
-    <button type="submit" class="btn btn-primary">Salvar</button>
+    <div class="form-group">
+        <label asp-for="Sinopse"></label>
+        <input asp-for="Sinopse" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="ReleaseYear"></label>
+        <input asp-for="ReleaseYear" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="Genre"></label>
+        <input asp-for="Genre" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="ISBN"></label>
+        <input asp-for="ISBN" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="Publisher"></label>
+        <input asp-for="Publisher" class="form-control" />
+    </div>
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <button type="submit" class="btn btn-primary mt-1">Salvar</button>
 </form>
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
