--- a/Views/Catalog/CreateMovie.cshtml
+++ b/Views/Catalog/CreateMovie.cshtml
@@ -15,5 +15,25 @@
         <label asp-for="Director"></label>
         <input asp-for="Director" class="form-control" />
     </div>
-    <button type="submit" class="btn btn-primary">Salvar</button>
+    <div class="form-group">
+        <label asp-for="Sinopse"></label>
+        <input asp-for="Sinopse" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="ReleaseYear"></label>
+        <input asp-for="ReleaseYear" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="Genre"></label>
+        <input asp-for="Genre" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="DurationMinutes"></label>
+        <input asp-for="DurationMinutes" class="form-control" />
+    </div>
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <button type="submit" class="btn btn-primary mt-1">Salvar</button>
 </form>
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
